# litestar-example-template

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
config/: example.config.toml
migrations/: env.py
migrations/versions/: 1b0cc973d1f7_.py
src/app/: config.py  ioc.py  main.py  provider.py
src/app/adapter/db/gateway/: __init__.py  base.py  task.py
src/app/adapter/db/migrations/: env.py
src/app/adapter/db/model/: __init__.py  task.py
src/app/adapter/presentation/: exception_handlers.py
src/app/adapter/presentation/controllers/: task.py
src/app/adapter/presentation/model/: id.py  task.py
src/app/adapter/presentation/openapi/: __init__.py
src/app/application/dto/: id.py  page.py  task.py
src/app/application/exceptions/: task.py
src/app/application/interactor/: task.py
src/app/application/interface/: db.py  task.py  transaction.py  ulid_generator.py
src/app/application/interface/gateway/: __init__.py  task.py
src/app/application/model/: task.py
src/app/application/usecase/: task.py
src/app/domain/model/: id.py  task.py
src/app/infrastructure/: db.py
src/app/presentation/: interactor.py
src/app/presentation/controllers/: task.py
src/app/presentation/model/: task.py
src/app/presentation/openapi/: __init__.py
src/app/presentation/openapi/parameter/: base.py  task.py
tests/mocks/: task.py  transaction.py
tests/unit/application/: conftest.py
tests/unit/application/interactor/: test_task.py
tests/unit/application/usecase/: test_task.py
(+11 files in other folders)
