[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "app"
description = "Example Service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Kuzmin", email = "qrer71@yandex.ru" }
]
dependencies = [
    "litestar<=2.10.0",
    "python-ulid<=2.7.0",
    "sqlalchemy<=2.0.31",
    "uvicorn<=0.30.5",
    "alembic<=1.13.2",
    "pydantic<=2.8.2",
    "psycopg[binary,pool]<=3.3.2",
    "sniffio>=1.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest<=8.2.0",
    "pytest-asyncio<=0.23.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
