[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "app"
description = "Example Service"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Alexander Kuzmin", email = "qrer71@yandex.ru" }
]
dependencies = [
    "litestar<=2.19.0",
    "python-ulid<=3.1.0",
    "sqlalchemy<=2.0.45",
    "uvicorn<=0.38.0",
    "alembic<=1.17.2",
    "pydantic<=2.12.5",
    "psycopg[binary,pool]<=3.3.2",
    "greenlet<=3.3.0",
    "dishka<=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest<=8.2.0",
    "pytest-asyncio<=0.23.6",
    "faker<=39.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
